Close #47 Upgrade to Java 16